# StageM1

./: .clang-format  .gitignore  CMakeLists.txt  README.md  ReadMe.md  e-puck.ttt  main.cpp  simVrep.cpp
Vrep/: e-puck.ttt  extApiPlatform.h  main  main.cpp  tempCodeRunnerFile.cpp
apps/: CMakeLists.txt  EPuckVREPDriver.cpp  Robot.cpp  RobotDriver.cpp  datafile.cpp  main.cpp
include/: Robot.hpp  RobotDriver.hpp  datafile.hpp
include/epuck/: .Robot.hpp.swp  EPuckV2Driver.hpp  Robot.hpp  RobotDriver.hpp  controlFunctions.hpp  datafile.hpp
include/sim/: extApi.h  extApiInternal.h  extApiPlatform.h
src/: CMakeLists.txt  EPuckVREPDriver.cpp  Robot.hpp  RobotDriver.hpp  datafile.cpp  extApiPlatform.c  main.cpp
src/epuck/: EPuckV1Driver.cpp  EPuckV2Driver.cpp  EPuckVREPDriver.cpp  Robot.cpp  RobotDriver.cpp  controlFunctions.cpp  datafile.cpp
src/sim/: extApi.c  extApiPlatform.c
